--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       <div class="pricing-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h3>Chihuahua</h3>
+            <h3 class="pricing-header">Chihuahua</h3>
           </div>
           <div class="card-body">
             <h2>Free</h2>
@@ -208,7 +208,7 @@
    <div class="pricing-column col-lg-4 col-md-6">
     <div class="card">
       <div class="card-header">
-        <h3>Labrador</h3>
+        <h3 class="pricing-header">Labrador</h3>
       </div>
       <div class="card-body">
         <h2>$49 / mo</h2>
@@ -224,7 +224,7 @@
     <div class="pricing-column col-lg-4 col-md-12">
       <div class="card">
         <div class="card-header">
-         <h3>Mastiff</h3>
+         <h3 class="pricing-header">Mastiff</h3>
         </div>
         <div class="card-body">
          <h2>$99 / mo</h2>
