--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <h3 class="pricing-header">Chihuahua</h3>
           </div>
           <div class="card-body">
+            <img class="chihuahua-image" src="images/chihuahua.jpeg" alt="Chihuahua">
             <h2>Free</h2>
             <p>5 Matches Per Day</p>
             <p>10 Messages Per Day</p>
@@ -211,6 +212,7 @@
         <h3 class="pricing-header">Labrador</h3>
       </div>
       <div class="card-body">
+        <img class="labrador-image" src="images/labrador.jpeg" alt="Labrador">
         <h2>$49 / mo</h2>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
@@ -227,6 +229,7 @@
          <h3 class="pricing-header">Mastiff</h3>
         </div>
         <div class="card-body">
+          <img class="mastiff-image" src="images/mastiff.jpeg" alt="Mastiff">
          <h2>$99 / mo</h2>
          <p>Pirority Listing</p>
          <p>Unlimited Matches</p>
